--- a/src/index.css
+++ b/src/index.css
@@ -147,3 +147,8 @@ button:focus:not(:focus-visible) {
   border-color: #730000;
   background-color: #730000;
 }
+
+a.download-table {
+  float: right;
+  cursor: pointer;
+}
